force-app/main/default/objects/Temp_GamingData__c/Temp_GamingData__c.object-meta.xml
<CustomObject>
    <label>Temp Gaming Data</label>
    <nameField>
        <displayFormat>TGD-{0000}</displayFormat>
        <label>Temp Gaming Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Gaming Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>