force-app/main/default/objects/Temp_GamingData__c/fields/ADT__c.field-meta.xml
<CustomField>
    <fullName>ADT__c</fullName>
    <label>ADT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>