force-app/main/default/objects/Temp_GamingData__c/fields/ADT_InclFreePlay__c.field-meta.xml
<CustomField>
    <fullName>ADT_InclFreePlay__c</fullName>
    <label>ADT_InclFreePlay</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>