force-app/main/default/objects/Temp_GamingData__c/fields/AverageBet__c.field-meta.xml
<CustomField>
    <fullName>AverageBet__c</fullName>
    <label>AverageBet</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>