force-app/main/default/objects/Temp_GamingData__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <label>ExternalID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>