force-app/main/default/objects/Temp_GamingData__c/fields/FreePlay__c.field-meta.xml
<CustomField>
    <fullName>FreePlay__c</fullName>
    <label>FreePlay</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>