force-app/main/default/objects/Temp_GamingData__c/fields/NetTheo__c.field-meta.xml
<CustomField>
    <fullName>NetTheo__c</fullName>
    <label>NetTheo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>