force-app/main/default/objects/Temp_GamingData__c/fields/SalesforceContactID2__c.field-meta.xml
<CustomField>
    <fullName>SalesforceContactID2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesforceContactID2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>