force-app/main/default/objects/Temp_GamingData__c/fields/SalesforceContactID__c.field-meta.xml
<CustomField>
    <fullName>SalesforceContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesforceContactID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Temp Gaming Data</relationshipLabel>
    <relationshipName>Temp_Gaming_Data</relationshipName>
    <type>Lookup</type>
</CustomField>