force-app/main/default/objects/Temp_GamingData__c/fields/SalesforcePropertyID__c.field-meta.xml
<CustomField>
    <fullName>SalesforcePropertyID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesforcePropertyID</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Temp Gaming Data</relationshipLabel>
    <relationshipName>Temp_Gaming_Data</relationshipName>
    <type>Lookup</type>
</CustomField>