force-app/main/default/objects/Temp_GamingData__c/fields/Theowin_InclFreePlay__c.field-meta.xml
<CustomField>
    <fullName>Theowin_InclFreePlay__c</fullName>
    <label>Theowin_InclFreePlay</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>