force-app/main/default/objects/Temp_GamingData__c/fields/Trips__c.field-meta.xml
<CustomField>
    <fullName>Trips__c</fullName>
    <label>Trips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>