force-app/main/default/objects/Temp_GamingData__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <label>Turnover</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>