force-app/main/default/objects/Temp_GamingData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Period__c</columns>
    <columns>ADT_InclFreePlay__c</columns>
    <columns>ADT__c</columns>
    <columns>NetTheo__c</columns>
    <columns>Theowin_InclFreePlay__c</columns>
    <columns>Turnover__c</columns>
    <columns>Actual__c</columns>
    <columns>FreePlay__c</columns>
    <columns>Trips__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>